[package]
name = "rust-rt"
version = "0.1.0"
authors = ["Steffen Deubler <steffen.deubler@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.1"
rand = "*"
image = "*"
progress = "*"
parry3d = "0.4.0"
